--- a/css/style.css
+++ b/css/style.css
@@ -200,9 +200,29 @@ footer .social-icons {
     text-align: center;
   }
 
-  nav ul {
+    nav ul {
     flex-direction: column;
     gap: 1rem;
+    width: 100%;
+  }
+
+  nav li {
+    display: block;
+  }
+
+  nav a {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    font-size: 1.2rem;
+  }
+
+  .menu-image {
+    width: 190%;
+  }
+
+.map-image {
+    width: 150%;
   }
 
   .text-block h3 {
